# iraklis7_ubp

./: .gitignore  LICENSE  MANIFEST.in  README.md  __init__.py  __package__  pyproject.toml  requirements.txt  setup.py
.github/workflows/: publish-app.yml  python-app.yml  test-app.yml
output/: AKN32864488.pdf.extract.json  AKN32864488.pdf.md5.json  AKN32864488.pdf.parse.json  AKN32864488.pdf.schema.json  ElectricityInvoice_2025-11-04.pdf.extract.json  ElectricityInvoice_2025-11-04.pdf.md5.json  ElectricityInvoice_2025-11-04.pdf.parse.json  ElectricityInvoice_2025-11-04.pdf.schema.json  GasInvoice_2025-12-04.pdf.extract.json  GasInvoice_2025-12-04.pdf.md5.json  GasInvoice_2025-12-04.pdf.parse.json  GasInvoice_2025-12-04.pdf.schema.json
src/: __init__.py
src/iraklis7_ubp/: __init__.py  utility_proc.py
src/ubp/: utility_proc.py
src/utility_bill_processor/: utility_model.py  utility_proc.py
tests/: simple_test.py  test.py  test_regression.py  test_simple.py
tests/expected/: AKN32864488.pdf.exp  ElectricityInvoice_2025-11-04.pdf.exp  GasInvoice_2025-12-04.pdf.exp
