[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=61.0", "setuptools-scm>=8.0"]


[project]
# https://packaging.python.org/en/latest/specifications/declaring-project-metadata/
name = "iraklis7_ubp"
version = "1.1.11"
description = "Utility Bill Processor"
readme = "README.md"
requires-python = ">=3.9,<4.0"
# "LICENSE" is name of the license file, which must be in root of project folder
license = "MIT"
authors = [
    {name = "Iraklis Diamantidis", email = "iraklis.diamantidis@gmail.com"},
]
keywords = ["utility", "bill"]
dependencies = [
  "landingai_ade==1.2.0",
  "pydantic==2.12.5",
  "pathlib==1.0.1",
]

[tool.setuptools.packages.find]
where = ["output", "tests"]

[tool.setuptools.package-data]
output = ["*.json"]
expected = ["*.exp"]
invoices = ["*.pdf"] 

[tool.hatch.build.targets.sdist]
# Basically everything except hidden files/directories (such as .github, .devcontainers, .python-version, etc)
include = [
  "output/*",
  "src/*",
  "tests/*",
  "/*.md",
  "/*.txt",
]