[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=61.0", "setuptools-scm>=8.0"]


[project]
# https://packaging.python.org/en/latest/specifications/declaring-project-metadata/
name = "iraklis7_ubp"
version = "1.2.0"
description = "Utility Bill Processor"
readme = "README.md"
requires-python = ">=3.9,<4.0"
# "LICENSE" is name of the license file, which must be in root of project folder
license = "MIT"
authors = [
    {name = "Iraklis Diamantidis", email = "iraklis.diamantidis@gmail.com"},
]
keywords = ["utility", "bill"]
dependencies = [
  "landingai_ade",
  "pydantic",
  "pathlib",
]

[tool.setuptools.packages]
find = {where = ["src"]}

#[tool.setuptools.packages.find]
#where = ["output", "tests"]

#[tool.setuptools.packages.find]
# All the following settings are optional:
#where = ["."]  # ["."] by default
#include = ["src", "output", "tests"]  # ["*"] by default
## exclude = ["mypackage.tests*"]  # empty by default
#namespaces = false  # true by default

[tool.setuptools]
# ...
# By default, include-package-data is true in pyproject.toml,
# so you do NOT have to specify this line.
include-package-data = true

[tool.setuptools.package-data]
output = ["*.json"]
expected = ["*.exp"]
invoices = ["*.pdf"] 

